[package]
name = "aleowrap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "aleowrap"

[dependencies.snarkvm]
version = "=0.16.1"
features = [ "circuit", "console", "rocks" ]

[dependencies.anyhow]
version = "1.0.75"

[dependencies.rand]
version = "0.8"
default-features = false

[dependencies.ureq]
version = "2.7"

[dependencies.time]
version = "0.3.7"
features = ["macros"]

[dependencies.tracing]
version = "0.1"

[dependencies.tracing-subscriber]
version = "0.3"
features = [ "env-filter", "parking_lot", "time", "local-time" ]