[package]
name = "aleowrap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "aleowrap"

[dependencies]
rayon = "1.8.0"
serde = "1.0"
serde_json = "1.0"

[dependencies.snarkvm-console]
version = "0.16.16"

[dependencies.snarkvm-circuit]
version = "0.16.16"

[dependencies.snarkvm-synthesizer]
version = "0.16.16"

[dependencies.snarkvm-ledger-block]
version = "0.16.16"

[dependencies.snarkvm-ledger-query]
version = "0.16.16"

[dependencies.snarkvm-ledger-store]
version = "0.16.16"

[dependencies.snarkvm-utilities]
version = "0.16.16"

[dependencies.anyhow]
version = "1.0.75"

[dependencies.rand]
version = "0.8"
default-features = false

[dependencies.ureq]
version = "2.7"

[dependencies.time]
version = "0.3.7"
features = ["macros"]

[dependencies.tracing]
version = "0.1"

[dependencies.js-sys]
version = "0.3"

[dependencies.tracing-subscriber]
version = "0.3"
features = [ "env-filter", "parking_lot", "time", "local-time" ]