[package]
name = "aleowrap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "aleowrap"

[dependencies]
rayon = "1.8.0"
serde = "1.0"
serde_json = "1.0"

[dependencies.ahash]
version = "0.8.8"

[dependencies.snarkvm-console]
git = "https://github.com/AleoHQ/snarkVM.git"
rev = "aef07da"

[dependencies.snarkvm-circuit]
git = "https://github.com/AleoHQ/snarkVM.git"
rev = "aef07da"

[dependencies.snarkvm-synthesizer]
git = "https://github.com/AleoHQ/snarkVM.git"
rev = "aef07da"

[dependencies.snarkvm-ledger-block]
git = "https://github.com/AleoHQ/snarkVM.git"
rev = "aef07da"

[dependencies.snarkvm-ledger-query]
git = "https://github.com/AleoHQ/snarkVM.git"
rev = "aef07da"

[dependencies.snarkvm-ledger-store]
git = "https://github.com/AleoHQ/snarkVM.git"
rev = "aef07da"

[dependencies.snarkvm-utilities]
git = "https://github.com/AleoHQ/snarkVM.git"
rev = "aef07da"

[dependencies.anyhow]
version = "1.0.75"

[dependencies.rand]
version = "0.8"
default-features = false

[dependencies.ureq]
version = "2.7"

[dependencies.time]
version = "0.3.7"
features = ["macros"]

[dependencies.tracing]
version = "0.1"

[dependencies.js-sys]
version = "0.3"

[dependencies.tracing-subscriber]
version = "0.3"
features = [ "env-filter", "parking_lot", "time", "local-time" ]

[features]
mainnetv0 = []
testnetv0 = []